--- a/views/index.ejs
+++ b/views/index.ejs
@@ -37,6 +37,10 @@
                     <div class="col-md-6" >
                         <div class="col-ml-12" style="box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);">
                             <h2>Insert Plant Thing</h2>
+                            <form action="/data" method="POST">
+                                <button type="submit">spin motor</button>
+                            </form>
+    
                             <ul>
                                 <% result.forEach(item => { 
                                     var currentTimestamp = new Date().getTime();
